# articles-app

./: .env  .env.development  .env.production  .gitignore  Articles.postman_collection.json  Dockerfile  README.md  articles_api_requirements.docx  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 086f80c73e7a_initial_migration.py  108779776143_initial_migration.py
src/articles/api/: deps.py  logging_middleware.py  router.py
src/articles/api/endpoints/: articles.py  auth.py  authors.py  comments.py  tags.py  users.py
src/articles/auth/: deps.py  jwt_utils.py  password_utils.py  schemas.py
src/articles/core/: config.py  dependencies.py  error_messages.py
src/articles/core/config/: base.py  development.py  factory.py  production.py  test.py
src/articles/db/: __init__.py  base.py  init_data.py  init_db.py  session.py  versioning.py  versioning_setup.py
src/articles/models/: __init__.py  article.py  author.py  base.py  comment.py  tag.py  user.py
src/articles/repositories/: __init__.py  article.py  author.py  base.py  comment.py  search_repository.py  tag.py  user.py
src/articles/schemas/: __init__.py  article.py  author.py  base.py  comment.py  tag.py  user.py
src/articles/services/: __init__.py  article.py  author.py  base.py  comment.py  tag.py  user.py
src/articles/utils/: decorators.py  logging.py
tests/: mocks.py  test_article_service.py  test_author_service.py  test_tag_service.py  test_user_service.py
